Fix the error box that did not show the text on IE7 only

--- a/bc.livesearch/demo.css
+++ b/bc.livesearch/demo.css
@@ -30,6 +30,7 @@ body {
 
 .bc-livesearch-autocomplete-msgicon {
     display: inline-block;
+    float: left;
 }
 
 .bc-livesearch-autocomplete-message {
